Client ready for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,20 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Build output
 dist
 dist-ssr
-*.local
 
-# Editor directories and files
+# Env files
+.env
+.env.local
+.env.*
+
+# Local / OS files
+*.local
 .vscode/*
 !.vscode/extensions.json
 .idea
